<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_textview"
        style="@style/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <Button
        android:id="@+id/btn_proj1"
        style="@style/button"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_textview"
        android:text="@string/project1"
        android:onClick="displayMessage"/>

    <Button
        android:id="@+id/btn_proj2"
        style="@style/button"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_proj1"
        android:text="@string/project2"
        android:onClick="displayMessage"/>

    <Button
        android:id="@+id/btn_proj3"
        style="@style/button"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_proj2"
        android:text="@string/project3"
        android:onClick="displayMessage"/>

    <Button
        android:id="@+id/btn_proj4"
        style="@style/button"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_proj3"
        android:text="@string/project4"
        android:onClick="displayMessage"/>

    <Button
        android:id="@+id/btn_proj5"
        style="@style/button"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_proj4"
        android:text="@string/project5"
        android:onClick="displayMessage"/>

    <Button
        android:id="@+id/btn_proj6"
        style="@style/redbutton"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_proj5"
        android:text="@string/project6"
        android:onClick="displayMessage"/>

</RelativeLayout>
